done the second part

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignment 1</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -25,7 +25,7 @@
                             Developer."</h1>
                         <p class="subtitle">I want to be a developer. and hoping to make great great websites by my own and work as a lead developer in a well known tech giant In Sha Allah.</p>
                         <div class="btn">
-                            <button>Contact with me</button>
+                            <a href="#footer"> <button>Contact with me</button></a>
                         </div>
                     </div>
                 </div>
@@ -34,9 +34,61 @@
         </section>
     </header>
     <main>
-
+        <section id="why-web-dev">
+            <div class="web-content">
+                <div>
+                    <h3>Why Web Development??</h3>
+                    <p>Web development is a great field to work with programming. you can make websites and will be able to know how they works and what the logic behind it.</p>
+                </div>
+            </div>
+        <section id="picsandworks">
+            <div class="contents">
+                <div class="main">
+                    <div class="description">
+                        <h3 class="title">I will Do Coding and Change The World</h3>
+                        <p class="sub">I will code to create innovative solutions, drive technological advancements, and contribute to making the world a better place for everyone.</p>
+                        <div class="button">
+                            <a href="https://www.google.co.uk/" target="_blank"><button >Learn More</button>
+                            </a> 
+                        </div>
+                    </div>
+                    <div class="img">
+                        <img src="assets/Layer_1.png" alt="">
+                    </div>
+                </div>
+                <div class="main">
+                    <div class="descriptiontwo">
+                        <div class="img">
+                            <img src="assets/Group 3.png" alt="">
+                        </div>
+                        <div>
+                        <h3 class="title">I will help People by creating Modern Web System</h3>
+                        <p class="sub">I will create a modern web system that simplifies processes, enhances user experience, and drives innovation for better community engagement and efficiency.</p>
+                        <div class="button">
+                            <a href="https://www.google.co.uk/" target="_blank"><button >Learn More</button>
+                            </a> 
+                        </div>
+                    </div>
+                    </div>
+                </div>
+                <div class="main">
+                    <div class="description">
+                        <h3 class="title">I will Do Coding and Change The World</h3>
+                        <p class="sub">I will code to create innovative solutions, drive technological advancements, and contribute to making the world a better place for everyone.</p>
+                        <div class="button">
+                            <a href="https://www.google.co.uk/" target="_blank"><button >Learn More</button>
+                            </a> 
+                        </div>
+                    </div>
+                    <div class="img">
+                        <img src="assets/Group 4.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
     </main>
-    <footer>
+    <footer id="footer">
 
     </footer>
 </body>
