--- a/index.html
+++ b/index.html
@@ -96,6 +96,48 @@
                 </div>
             </div>
         </section>
+        <section id="target">
+            {
+                <div class="targets">
+                    <div class="current-target">
+                        <h3 class="target-title">My Current Target</h3>
+                        <p class="target-subtitle">Right now my current target is to work with html, css & javascript. And I am practicing more and more and harder to get proficient in it.</p>
+                        <div class="card-boxs">
+                            <div class="card">
+                                <div class="img">
+                                    <img src="assets/html.png" alt="">
+                                    <h1 class="img-title">HTML</h1>
+                                    <p class="img-subtitle">HTML, or Hypertext Markup Language, forms the backbone of web pages, defining content structure through tags like "html", "head", and "body".</p>
+                                    <div class="link">
+                                        <a href="https://www.w3schools.com/html/" target="_blank">Learn More</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="img">
+                                    <img src="assets/css.png" alt="">
+                                    <h1 class="img-title">CSS</h1>
+                                    <p class="img-subtitle">HTML, or Hypertext Markup Language, forms the backbone of web pages, defining content structure through tags like "html", "head", and "body".</p>
+                                    <div class="link">
+                                        <a href="https://www.w3schools.com/css/" target="_blank">Learn More</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="img">
+                                    <img src="assets/js.png" alt="">
+                                    <h1 class="img-title">JavaScript</h1>
+                                    <p class="img-subtitle">HTML, or Hypertext Markup Language, forms the backbone of web pages, defining content structure through tags like "html", "head", and "body".</p>
+                                    <div class="link">
+                                        <a href="https://www.w3schools.com/js/" target="_blank">Learn More</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
+        </section>
     </main>
     <footer id="footer">
 
