done with target section

--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
             </div>
         </section>
         <section id="target">
-            {
+            
                 <div class="targets">
                     <div class="current-target">
                         <h3 class="target-title">My Current Target</h3>
                         <p class="target-subtitle">Right now my current target is to work with html, css & javascript. And I am practicing more and more and harder to get proficient in it.</p>
                         <div class="card-boxs">
-                            <div class="card">
+                            <div class="card1">
                                 <div class="img">
                                     <img src="assets/html.png" alt="">
                                     <h1 class="img-title">HTML</h1>
@@ -113,21 +113,21 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card">
+                            <div class="card2">
                                 <div class="img">
                                     <img src="assets/css.png" alt="">
                                     <h1 class="img-title">CSS</h1>
-                                    <p class="img-subtitle">HTML, or Hypertext Markup Language, forms the backbone of web pages, defining content structure through tags like "html", "head", and "body".</p>
+                                    <p class="img-subtitle">CSS, or Cascading Style Sheets, enhances web pages by defining layout, design, and appearance, ensuring visual consistency and user experience improvement.</p>
                                     <div class="link">
                                         <a href="https://www.w3schools.com/css/" target="_blank">Learn More</a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="card">
+                            <div class="card3">
                                 <div class="img">
                                     <img src="assets/js.png" alt="">
                                     <h1 class="img-title">JavaScript</h1>
-                                    <p class="img-subtitle">HTML, or Hypertext Markup Language, forms the backbone of web pages, defining content structure through tags like "html", "head", and "body".</p>
+                                    <p class="img-subtitle">JavaScript, a versatile scripting language, empowers web development by enabling interactive and dynamic functionality within browsers and applications.</p>
                                     <div class="link">
                                         <a href="https://www.w3schools.com/js/" target="_blank">Learn More</a>
                                     </div>
@@ -135,8 +135,50 @@
                             </div>
                         </div>
                     </div>
+                    <div class="next-targets">
+                        <h3 class="ne-target-title">My Next Target</h3>
+                        <p class="ne-target-subtitle">After finishing my current target i will move to my next target which is to learn some distro of javascript like ReactJS NodeJS and some database language like MongoDB to flurish my journey in web-devolepment.</p>
+                        <div class="next-cards">
+                            <div class="next-card">
+                                <div class="img">
+                                    <img src="assets/react.png" alt="">
+                                </div>
+                                <div class="next-card-des">
+                                    <h1 class="img-title">ReactJS</h1>
+                                    <p class="img-subtitle">React.js, a JavaScript library, simplifies building user interfaces by utilizing reusable components for efficient and dynamic web application development.</p>
+                                    <div class="link">
+                                        <a href="https://www.w3schools.com/react/" target="_blank">Learn More</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="next-card">
+                                <div class="img">
+                                    <img src="assets/nodejs.png" alt="">
+                                </div>
+                                <div class="next-card-des">
+                                    <h1 class="img-title">NodeJS</h1>
+                                    <p class="img-subtitle">Node.js, a runtime environment built on Chrome's V8 JavaScript engine, facilitates server-side JavaScript execution for scalable and efficient web applications.</p>
+                                    <div class="link">
+                                        <a href="https://www.w3schools.com/nodejs/" target="_blank">Learn More</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="next-card">
+                                <div class="img">
+                                    <img src="assets/mongodb.png" alt="">
+                                </div>
+                                <div class="next-card-des">
+                                    <h1 class="img-title">MongoDB</h1>
+                                    <p class="img-subtitle">MongoDB, a NoSQL database, provides flexible schema design and scalability, enabling efficient storage and retrieval of data for modern applications.</p>
+                                    <div class="link">
+                                        <a href="https://www.w3schools.com/mongodb/" target="_blank">Learn More</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            }
+            
         </section>
     </main>
     <footer id="footer">
