--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
                 </div>
             
         </section>
-        <section id="support">
-            <div class="support-me">
-                <h1 class="support-title">I need Support</h1>
-                <p class="support-subtitle">Support me in this awesome journey of mine in the road of the web-devolepment. Your support matters a lot to me</p>
+        <section id="supporting">
+            <div class="supporting-me">
+                <h1 class="supporting-title">I need Support</h1>
+                <p class="supporting-subtitle">Support me in this awesome journey of mine in the road of the web-devolepment. Your support matters a lot to me</p>
                 <form action="">
                     <input type="text" placeholder="Suggest me any feedback for me">
                     <input type="submit" value="Submit">
