done and dusted

--- a/index.html
+++ b/index.html
@@ -193,7 +193,18 @@
         </section>
     </main>
     <footer id="footer">
-
+        <p class="fotter-title">An Open Commitment by Nokibul Hasan</p>
+        <div class="social-icon">
+            <a href="https://www.facebook.com/nokibul.tasir.7" target="_blank">
+                <img src="assets/facebook.png" alt="">
+            </a>
+            <a href="https://github.com/Nokibulofficial18" target="_blank">
+                <img src="assets/github.png" alt="">
+            </a>
+            <a href="https://www.linkedin.com/in/nokibul-hasan-mojumder-tasir-aa300a21a/" target="_blank">
+                <img src="assets/linkedin-icon 1.png" alt="">
+            </a>
+        </div>
     </footer>
 </body>
 </html>
